--- a/Downloads/PersonalWebsite/index.html
+++ b/Downloads/PersonalWebsite/index.html
@@ -112,8 +112,35 @@
         <div class="experience-details-container">
             <div class="about-containers">
                 <div class="details-container">
-                    <h2 class="experience-sub-title"> Frontend Development</h2>
+                    <h2 class="experience-sub-title"> Skills</h2>
                     <div class="article-container">
+                    <article>
+                        <img 
+                        src="./assets/checkmark.png" 
+                        alt="Experience icon" 
+                        class="icon"
+                        />
+                        <h3>Java</h3>
+                        <p>Experienced</p>
+                    </article>
+                    <article>
+                        <img 
+                        src="./assets/checkmark.png" 
+                        alt="Experience icon" 
+                        class="icon"
+                        />
+                        <h3>Python</h3>
+                        <p>Intermediate</p>
+                    </article>
+                    <article>
+                        <img 
+                        src="./assets/checkmark.png" 
+                        alt="Experience icon" 
+                        class="icon"
+                        />
+                        <h3>C</h3>
+                        <p>Experienced</p>
+                    </article>
                     <article>
                         <img 
                         src="./assets/checkmark.png" 
@@ -138,39 +165,12 @@
                         alt="Experience icon" 
                         class="icon"
                         />
-                        <h3>Java</h3>
-                        <p>Experienced</p>
-                    </article>
-                    <article>
-                        <img 
-                        src="./assets/checkmark.png" 
-                        alt="Experience icon" 
-                        class="icon"
-                        />
-                        <h3>Python</h3>
-                        <p>Experienced</p>
-                    </article>
-                    <article>
-                        <img 
-                        src="./assets/checkmark.png" 
-                        alt="Experience icon" 
-                        class="icon"
-                        />
-                        <h3>C</h3>
-                        <p>Experienced</p>
-                    </article>
-                    <article>
-                        <img 
-                        src="./assets/checkmark.png" 
-                        alt="Experience icon" 
-                        class="icon"
-                        />
                         <h3>JavaScript</h3>
-                        <p>Experienced</p>
+                        <p>Intermediate</p>
                     </article>
                 </div>
             </div>
-                <div class="details-container">
+                <!-- <div class="details-container">
                     <h2 class="experience-sub-title"> Backend Development</h2>
                     <div class="article-container">
                     <article>
@@ -228,7 +228,7 @@
                         <p>Experienced</p>
                     </article>
                 </div>
-                </div>
+                </div> -->
             </div>
             </div>
             </div>
@@ -247,23 +247,24 @@
               <div class="article-container">
                 <img
                   src="./assets/project-1.png"
-                  alt="Project 1"
+                  alt="Optimisation Algorithms"
                   class="project-img"
                 />
               </div>
-              <h2 class="experience-sub-title project-title">Project One</h2>
+              <h2 class="experience-sub-title project-title">Optimisation Algorithms (Google HashCode 2017)</h2>
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://github.com/hannahlluu/optimisation-algorithms'"
                 >
                   Github
                 </button>
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="window.open('./assets/Optimisation Algorithms - 22336550-3.pdf')"
                 >
-                  Live Demo
+                  Report Document 
+
                 </button>
               </div>
             </div>
@@ -275,20 +276,15 @@
                   class="project-img"
                 />
               </div>
-              <h2 class="experience-sub-title project-title">Project Two</h2>
+              <h2 class="experience-sub-title project-title">Student Job Portal (LifeRay)</h2>
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
-                >
-                  Github
-                </button>
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="window.open('https://drive.google.com/file/d/1zsR4Oz-82szB55iixVFN4ejy4nKKHbW9/view?usp=share_link')"
                 >
                   Live Demo
                 </button>
+            
               </div>
             </div>
             <div class="details-container color-container">
