--- a/Downloads/PersonalWebsite/index.html
+++ b/Downloads/PersonalWebsite/index.html
@@ -37,7 +37,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/1718980663773.jpeg" alt="Hannah Luu Profile Picture"/>
+            <img src="./assets/profile-pic.png" alt="Hannah Luu Profile Picture"/>
         </div>
         <div class="section__text">
             <p class="section-text_p1"> Hello, I'm</p>
